--- a/about.html
+++ b/about.html
@@ -58,37 +58,38 @@
             <h2>Other Projects</h2><br>
             <ul>
                <li><a href="http://open-course.co:8000/" target="_blank">Open Course</a></li>
-               <li><a href="files/_Soccer WSA_ Final Presentation.pdf" target="_blank">Soccer Transfer Market Data
+               <li><a href="files/Soccer_WSA_Final_Presentation.pdf" target="_blank">Soccer Transfer Market Data
                      Analytics</a></li>
                <li>Chelsea Data Analytics (Coming Soon...)</li>
             </ul>
          </div>
+      </div>
    </main>
+   <footer>
+      <div class="first-footer">
+         <div>
+            <h3>About</h3>
+            <div class="first-footer-sub">
+               <a href="https://github.com/philipchurchley" target="_blank">Github</a>
+               <a href="https://soundcloud.com/philip-churchley" target="_blank">SoundCloud</a>
+               <a href="https://www.youtube.com/@PhilipChurchley" target="_blank">YouTube</a>
+            </div>
+         </div>
+         <div>
+            <h3>Contact</h3>
+            <div class="first-footer-sub">
+               <a href="https://www.instagram.com/p.churchley/" target="_blank">Instagram</a>
+               <a href="https://www.linkedin.com/in/philip-churchley/" target="_blank">LinkedIn</a>
+               <a href="mailto:pchurchl@umich.edu" target="_blank">pchurchl@umich.edu</a>
+            </div>
+         </div>
+      </div>
+      <div class="second-footer">
+         <p>© Copyright Philip Churchley 2024 - 2025</p>
+      </div>
+   </footer>
 </body>
 
-<footer>
-   <div class="first-footer">
-      <div>
-         <h3>About</h3>
-         <div class="first-footer-sub">
-            <a href="https://github.com/philipchurchley" target="_blank">Github</a>
-            <a href="https://soundcloud.com/philip-churchley" target="_blank">SoundCloud</a>
-            <a href="https://www.youtube.com/@PhilipChurchley" target="_blank">YouTube</a>
-         </div>
-      </div>
-      <div>
-         <h3>Contact</h3>
-         <div class="first-footer-sub">
-            <a href="https://www.instagram.com/p.churchley/" target="_blank">Instagram</a>
-            <a href="https://www.linkedin.com/in/philip-churchley/" target="_blank">LinkedIn</a>
-            <a href="mailto:pchurchl@umich.edu" target="_blank">pchurchl@umich.edu</a>
-         </div>
-      </div>
-   </div>
-   <div class="second-footer">
-      <p>© Copyright Philip Churchley 2024 - 2025</p>
-   </div>
-</footer>
 <script src="js/cereal.js"></script>
 
 </html>
