--- a/custom.html
+++ b/custom.html
@@ -36,7 +36,7 @@
          <div>
             <h2>Step 1: </h2>
             <p>Please rate how much you value the following factors in your cereal. Use a scale from 1-10. </p>
-            </br>
+            <br>
             <div class="input"><label for="diversity"
                   title="Rate how important it is to buy a diverse set of cereals">Diversity:</label>
                <input type="text" id="diversity" name="diversity" value="">
@@ -67,11 +67,11 @@
          <div>
             <h2>Step 2: </h2>
             <p>Please input your budget! (Use a whole numbers, in dollars)</p>
-            </br>
+            <br>
             <label for="budget">Budget: $</label>
             <input type="text" id="budget" name="budget" value=""><br>
-            <label for="priceopt" title="Prioritizes cost efficient cereals">Conserve my Money</label>
-            <div tabindex="0" id="priceopt" name="priceopt" title="Prioritizes cost efficient cereals"></div>
+            <p class="label" title="Prioritizes cost efficient cereals">Conserve my Money</p>
+            <div tabindex="0" id="priceopt" title="Prioritizes cost efficient cereals"></div>
             <br><br>
          </div>
          <img src="images/money.png" alt="Dollar Bill Graphic">
@@ -277,31 +277,30 @@
          </div>
       </div>
    </main>
+   <footer>
+      <div class="first-footer">
+         <div>
+            <h3>About</h3>
+            <div class="first-footer-sub">
+               <a href="https://github.com/philipchurchley" target="_blank">Github</a>
+               <a href="https://soundcloud.com/philip-churchley" target="_blank">SoundCloud</a>
+               <a href="https://www.youtube.com/@PhilipChurchley" target="_blank">YouTube</a>
+            </div>
+         </div>
+         <div>
+            <h3>Contact</h3>
+            <div class="first-footer-sub">
+               <a href="https://www.instagram.com/p.churchley/" target="_blank">Instagram</a>
+               <a href="https://www.linkedin.com/in/philip-churchley/" target="_blank">LinkedIn</a>
+               <a href="mailto:pchurchl@umich.edu" target="_blank">pchurchl@umich.edu</a>
+            </div>
+         </div>
+      </div>
+      <div class="second-footer">
+         <p>© Copyright Philip Churchley 2024 - 2025</p>
+      </div>
+   </footer>
 </body>
-
-<footer>
-   <div class="first-footer">
-      <div>
-         <h3>About</h3>
-         <div class="first-footer-sub">
-            <a href="https://github.com/philipchurchley" target="_blank">Github</a>
-            <a href="https://soundcloud.com/philip-churchley" target="_blank">SoundCloud</a>
-            <a href="https://www.youtube.com/@PhilipChurchley" target="_blank">YouTube</a>
-         </div>
-      </div>
-      <div>
-         <h3>Contact</h3>
-         <div class="first-footer-sub">
-            <a href="https://www.instagram.com/p.churchley/" target="_blank">Instagram</a>
-            <a href="https://www.linkedin.com/in/philip-churchley/" target="_blank">LinkedIn</a>
-            <a href="mailto:pchurchl@umich.edu" target="_blank">pchurchl@umich.edu</a>
-         </div>
-      </div>
-   </div>
-   <div class="second-footer">
-      <p>© Copyright Philip Churchley 2024 - 2025</p>
-   </div>
-</footer>
 <script src="js/cereal.js"></script>
 <script src="js/custom.js"></script>
 
