--- a/favs.html
+++ b/favs.html
@@ -49,69 +49,69 @@
          <div class="card-carousel">
             <div class="card step" id="1" title="Try dragging to rotate through the cards">
                <div class="image-container"></div>
-               <p>
-               <h3>Krave: </h3><br> Eaten by itself or mixed with strawberries, and chex cereal.
+               <h3>Krave: </h3><br>
+               <p>Eaten by itself or mixed with strawberries, and chex cereal.
                </p>
             </div>
             <div class="card step" id="2" title="Try dragging to rotate through the cards">
                <div class="image-container"></div>
-               <p>
-               <h3>Chocolate Mini Wheats: </h3><br> Eaten by itself or with blueberries. This cereal has unfortunately
-               been discontinued.
+               <h3>Chocolate Mini Wheats: </h3><br>
+               <p> Eaten by itself or with blueberries. This cereal has unfortunately
+                  been discontinued.
                </p>
             </div>
             <div class="card step" id="3" title="Try dragging to rotate through the cards">
                <div class="image-container"></div>
-               <p>
-               <h3>Honey Bunches of Oats: </h3><br> Eaten with any fruit and granola. Optional mix with other cereals
-               such as Special K, Life, Great Grains, or Golden Grahams.
+               <h3>Honey Bunches of Oats: </h3><br>
+               <p> Eaten with any fruit and granola. Optional mix with other cereals
+                  such as Special K, Life, Great Grains, or Golden Grahams.
                </p>
             </div>
             <div class="card step" id="4" title="Try dragging to rotate through the cards">
                <div class="image-container"></div>
-               <p>
-               <h3>Count Chocula: </h3><br> Eaten by itself or with blueberries and granola. This cereal is only
-               distributed during the halloween season, but it's best to get it post-halloween on clearance.
+               <h3>Count Chocula: </h3><br>
+               <p> Eaten by itself or with blueberries and granola. This cereal is only
+                  distributed during the halloween season, but it's best to get it post-halloween on clearance.
                </p>
             </div>
             <div class="card step" id="5" title="Try dragging to rotate through the cards">
                <div class="image-container"></div>
-               <p>
-               <h3>Chocolate Chex: </h3><br> Eaten with chocolate granola, strawberries, blueberries, and peanut butter
-               chex. I recommend Love Crunch brand granola (either chocolate & red berries or chocolate & peanut butter)
+               <h3>Chocolate Chex: </h3><br>
+               <p> Eaten with chocolate granola, strawberries, blueberries, and peanut butter
+                  chex. I recommend Love Crunch brand granola (either chocolate & red berries or chocolate & peanut
+                  butter)
                </p>
             </div>
          </div>
          <a href="#" class="visuallyhidden card-controller">Carousel controller</a>
       </div>
-      <div id="arrows"><button id="right" tabindex="0">&lt</button><button id="left" tabindex="0">&gt</button></div>
+      <div id="arrows"><button id="right" tabindex="0">&lt;</button><button id="left" tabindex="0">&gt;</button></div>
       <br><br><br>
    </main>
+   <footer>
+      <div class="first-footer">
+         <div>
+            <h3>About</h3>
+            <div class="first-footer-sub">
+               <a href="https://github.com/philipchurchley" target="_blank">Github</a>
+               <a href="https://soundcloud.com/philip-churchley" target="_blank">SoundCloud</a>
+               <a href="https://www.youtube.com/@PhilipChurchley" target="_blank">YouTube</a>
+            </div>
+         </div>
+         <div>
+            <h3>Contact</h3>
+            <div class="first-footer-sub">
+               <a href="https://www.instagram.com/p.churchley/" target="_blank">Instagram</a>
+               <a href="https://www.linkedin.com/in/philip-churchley/" target="_blank">LinkedIn</a>
+               <a href="mailto:pchurchl@umich.edu" target="_blank">pchurchl@umich.edu</a>
+            </div>
+         </div>
+      </div>
+      <div class="second-footer">
+         <p>© Copyright Philip Churchley 2024 - 2025</p>
+      </div>
+   </footer>
 </body>
-
-<footer>
-   <div class="first-footer">
-      <div>
-         <h3>About</h3>
-         <div class="first-footer-sub">
-            <a href="https://github.com/philipchurchley" target="_blank">Github</a>
-            <a href="https://soundcloud.com/philip-churchley" target="_blank">SoundCloud</a>
-            <a href="https://www.youtube.com/@PhilipChurchley" target="_blank">YouTube</a>
-         </div>
-      </div>
-      <div>
-         <h3>Contact</h3>
-         <div class="first-footer-sub">
-            <a href="https://www.instagram.com/p.churchley/" target="_blank">Instagram</a>
-            <a href="https://www.linkedin.com/in/philip-churchley/" target="_blank">LinkedIn</a>
-            <a href="mailto:pchurchl@umich.edu" target="_blank">pchurchl@umich.edu</a>
-         </div>
-      </div>
-   </div>
-   <div class="second-footer">
-      <p>© Copyright Philip Churchley 2024 - 2025</p>
-   </div>
-</footer>
 <script src="js/cereal.js"></script>
 <script src="js/favcards.js"></script>
 <script src="js/carousel.js"></script>
