--- a/index.html
+++ b/index.html
@@ -54,47 +54,48 @@
          <div class="card-carousel">
             <div class="card step" id="1" title="Try dragging to rotate through the cards">
                <div class="image-container"></div>
-               <p>
-               <h3>Mixing Value: </h3> Mixing value represents how well a cereal can mix with granola or other cereals.
-               Mixing cereals is a great way to add flavor and diversify the texture of each bite. Mixing is such a
-               underrated aspect of cereal, since it opens up so many new possibilities and flavors.
+               <h3>Mixing Value: </h3>
+               <p>Mixing value represents how well a cereal can mix with granola or other cereals.
+                  Mixing cereals is a great way to add flavor and diversify the texture of each bite. Mixing is such a
+                  underrated aspect of cereal, since it opens up so many new possibilities and flavors.
                </p>
             </div>
             <div class="card step" id="2" title="Try dragging to rotate through the cards">
                <div class="image-container"></div>
-               <p>
-               <h3>Chocolatiness: </h3> Chocolate Cereals are a favorite for many. You can thank them for the classic
-               chocolate milk that's left in your bowl when you're done with your cereal. Rate a 5 for no consideration
-               towards chocolatiness, or higher/lower depending on your preference.
+               <h3>Chocolatiness: </h3>
+               <p>Chocolate Cereals are a favorite for many. You can thank them for the classic
+                  chocolate milk that's left in your bowl when you're done with your cereal. Rate a 5 for no
+                  consideration
+                  towards chocolatiness, or higher/lower depending on your preference.
                </p>
             </div>
             <div class="card step" id="3" title="Try dragging to rotate through the cards">
                <div class="image-container"></div>
-               <p>
-               <h3>Healthiness: </h3> News flash! Cereal does not have to be an unhealthy breakfast option. Healthy
-               cereals shouldn't be highly processed and can usually be identified by their low sugar and high whole
-               grain contents. Luckily, you don't need to sacrifice great taste :)
+               <h3>Healthiness: </h3>
+               <p>News flash! Cereal does not have to be an unhealthy breakfast option. Healthy
+                  cereals shouldn't be highly processed and can usually be identified by their low sugar and high whole
+                  grain contents. Luckily, you don't need to sacrifice great taste :)
                </p>
             </div>
             <div class="card step" id="4" title="Try dragging to rotate through the cards">
                <div class="image-container"></div>
-               <p>
-               <h3>Fruit Value: </h3> A cereal's fruit value corresponds to how well it pairs with fruit. Adding fruit
-               to cereal is a great way to make your meal both healthier and tastier! Some great fruits to add are
-               strawberries, blueberries, blackberries, or raspberries.
+               <h3>Fruit Value: </h3>
+               <p>A cereal's fruit value corresponds to how well it pairs with fruit. Adding fruit
+                  to cereal is a great way to make your meal both healthier and tastier! Some great fruits to add are
+                  strawberries, blueberries, blackberries, or raspberries.
                </p>
             </div>
             <div class="card step" id="5" title="Try dragging to rotate through the cards">
                <div class="image-container"></div>
-               <p>
-               <h3>Sugary Sweetness: </h3> Sugary cereals are great for people who have a strong sweet tooth. They make
-               amazing snacks or desserts, and are also great ways to treat yourself for breakfast.
+               <h3>Sugary Sweetness: </h3>
+               <p>Sugary cereals are great for people who have a strong sweet tooth. They make
+                  amazing snacks or desserts, and are also great ways to treat yourself for breakfast.
                </p>
             </div>
          </div>
          <a href="#" class="visuallyhidden card-controller">Carousel controller</a>
       </div>
-      <div id="arrows"><button id="right" tabindex="0">&lt</button><button id="left" tabindex="0">&gt</button></div>
+      <div id="arrows"><button id="right" tabindex="0">&lt;</button><button id="left" tabindex="0">&gt;</button></div>
       <div class="step intro">
          <h3>Diversity: </h3>
          <p> The final thing to think about is your cereal order's diversity. How many different types
@@ -110,31 +111,30 @@
       </div>
       <br><br><br>
    </main>
+   <footer>
+      <div class="first-footer">
+         <div>
+            <h3>About</h3>
+            <div class="first-footer-sub">
+               <a href="https://github.com/philipchurchley" target="_blank">Github</a>
+               <a href="https://soundcloud.com/philip-churchley" target="_blank">SoundCloud</a>
+               <a href="https://www.youtube.com/@PhilipChurchley" target="_blank">YouTube</a>
+            </div>
+         </div>
+         <div>
+            <h3>Contact</h3>
+            <div class="first-footer-sub">
+               <a href="https://www.instagram.com/p.churchley/" target="_blank">Instagram</a>
+               <a href="https://www.linkedin.com/in/philip-churchley/" target="_blank">LinkedIn</a>
+               <a href="mailto:pchurchl@umich.edu" target="_blank">pchurchl@umich.edu</a>
+            </div>
+         </div>
+      </div>
+      <div class="second-footer">
+         <p>© Copyright Philip Churchley 2024 - 2025</p>
+      </div>
+   </footer>
 </body>
-
-<footer>
-   <div class="first-footer">
-      <div>
-         <h3>About</h3>
-         <div class="first-footer-sub">
-            <a href="https://github.com/philipchurchley" target="_blank">Github</a>
-            <a href="https://soundcloud.com/philip-churchley" target="_blank">SoundCloud</a>
-            <a href="https://www.youtube.com/@PhilipChurchley" target="_blank">YouTube</a>
-         </div>
-      </div>
-      <div>
-         <h3>Contact</h3>
-         <div class="first-footer-sub">
-            <a href="https://www.instagram.com/p.churchley/" target="_blank">Instagram</a>
-            <a href="https://www.linkedin.com/in/philip-churchley/" target="_blank">LinkedIn</a>
-            <a href="mailto:pchurchl@umich.edu" target="_blank">pchurchl@umich.edu</a>
-         </div>
-      </div>
-   </div>
-   <div class="second-footer">
-      <p>© Copyright Philip Churchley 2024 - 2025</p>
-   </div>
-</footer>
 <script src="js/cereal.js"></script>
 <script src="js/learncards.js"></script>
 <script src="js/carousel.js"></script>
